<resources>
    <string name="app_name">Momomeal</string>

    <!-- Temp Text -->
    <string name="namesize_fill_text">Lorem</string>
    <string name="short_fill_text">Lorem ipsum dolor sit amet</string>

    <!-- MainActivity`s BottomNavigationView Text -->
    <string name="home_title">홈</string>
    <string name="chatroom_title">채팅</string>
    <string name="mypage_title">마이페이지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- CreateChatFragment`s Text-->
    <string name="toolbar_create_chat">채팅방 만들기</string>
    <string name="tv_chat_title_text">제목</string>
    <string name="tv_category_text">카테고리</string>
    <string name="tv_max_capacity_text">인원 수</string>
    <string name="tv_deliver_place_text">배달 가게</string>
    <string name="tv_location_text">수령 장소</string>
    <string name="btn_create_confirm_txt">생성하기</string>

    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="view_login_signUp">아직 계정이 없으신가요?</string>
    <string name="btn_login_text">로그인</string>
    <string name="btn_login_signup">회원가입</string>
    <string name="btn_login_kakao">카카오로 계속하기</string>

    <string name="view_signup_welcome">혼자 해결하던 식사\n이제는 다 같이 먹자!</string>
    <string name="btn_greeting_signup_email">이메일로 가입하기</string>
    <string name="view_greeting_check">이미 계정이 있으신가요?</string>

    <!-- MypageFragment`s Text -->
    <string name="tv_my_manner_point">나의 매너지수는?</string>

    <!-- ProfileFragment`s Text -->
    <string name="profile_title">프로필</string>
    <string name="btn_review_txt">평가하기</string>

    <!-- ChatActivity`s Text -->
    <string name="chat_info_text">채팅방 정보</string>
    <string name="chat_member_text">대화 상대</string>
    <string name="et_hint">메시지를 입력해주세요</string>
</resources>

