<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_login_small"
        android:layout_above="@+id/activity_login_email"
        android:layout_alignStart="@id/activity_login_password"
        android:layout_marginVertical="28dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_login_password"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="32dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_check_24"
        app:boxStrokeColor="@color/orange_deep"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray4"
            android:hint="@string/prompt_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/orange_deep"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_black"
            android:textColorHint="@color/gray4"
            android:hint="@string/prompt_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/containedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_password"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_btn_background"
        android:textColor="@color/white"
        android:text="@string/btn_login_text"
        android:onClick="onLoginBtnClick"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/containedButton"
        android:layout_centerHorizontal="true"
        android:textSize="12sp">
        <TextView
            android:id="@+id/activity_login_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_login_signUp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/orange_deep"
            android:text="@string/btn_login_signup"
            />

    </LinearLayout>

</RelativeLayout>