<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/fragment_login_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:drawableStart="@drawable/login_tv_background"
        android:drawablePadding="8dp"
        android:fontFamily="@font/lotte_mart_dream_bold"
        android:gravity="center"
        android:letterSpacing="0.18"
        android:text="모두모아한끼"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/orange_deep"
        app:endIconDrawable="@drawable/ic_check_24"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:boxStrokeColor="@color/orange_deep"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_auto"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray4" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/fragment_login_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:buttonTint="@color/gray4"
        android:text="자동로그인"
        android:textColor="@color/gray4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_orange_deep_radius"
        android:fontFamily="@font/roboto_black"
        android:text="@string/btn_login_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_auto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_login_kakao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_orange_deep_radius"
        android:fontFamily="@font/roboto_black"
        android:text="@string/btn_login_kakao"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_submit" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_kakao">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/view_login_signUp" />

        <TextView
            android:id="@+id/fragment_login_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_signup"
            android:textColor="@color/orange_deep" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>