<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateChatFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_chat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/ic_all_btn_back_24"
                android:backgroundTint="@color/gray1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_create_chat"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_chat">

        <TextView
            android:id="@+id/tv_chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_chat_title_text"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gray1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_chat_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/textfield_create_chat_normal"
            android:ems="20"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp">

            <TextView
                android:id="@+id/tv_chat_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/tv_category_text"
                android:textColor="@color/gray1"
                app:layout_constraintStart_toStartOf="@+id/spn_chat_category"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_chat_category"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/spn_chat_max_capacity"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_chat_category" />

            <TextView
                android:id="@+id/tv_chat_max_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/tv_max_capacity_text"
                android:textColor="@color/gray1"
                app:layout_constraintStart_toStartOf="@+id/spn_chat_max_capacity"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_chat_max_capacity"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/spn_chat_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_chat_max_capacity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_chat_deliver_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_deliver_place_text"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gray1"
            android:layout_marginTop="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_chat_deliver_place"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/textfield_create_chat_normal"
            android:ems="20"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_deliver_place" />

        <TextView
            android:id="@+id/tv_chat_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_location_text"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gray1"
            android:layout_marginTop="270dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_chat_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/textfield_create_chat_normal"
            android:ems="20"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_location" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_chat_craete_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="56dp"
        android:text="@string/btn_create_confirm_txt"
        android:background="@drawable/login_btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>